--- a/src/styles/ItemMesin.css
+++ b/src/styles/ItemMesin.css
@@ -19,7 +19,7 @@
     width: fit-content;
     height: fit-content;
     color: black;
-    font-style: oblique;
+    font-weight: bold;
     font-size: 18px;
     text-align: left;
 }
