--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,17 @@ body {
 
 .my-custom-form {
   border:none;
-  outline: none;
-  
+  outline: none;  
+}
+
+.tab-content{
+  width: 100%;
+}
+
+.modal-dialog { 
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
